# Gamma_Hordo

./: .gitignore  CMakeLists.txt  jegyzet  main.cc
.cache/clangd/index/: HPGeDetectorConstruction.cc.20760987FFD724B6.idx  Materials.cc.DCC1466D991BE29E.idx  (+55 more)
Macros/: muonMomentumDistr.mac  vis.mac
include/: Materials.hh  YourActionInitialisation.hh  YourBarrel.hh  YourBarrelContent.hh  YourBarrelSideWall.hh  YourBarrelVerticalWall.hh  YourCollimator.hh  YourCollimatorLayer.hh  YourDetector.hh  YourDetectorBody.hh  YourDetectorConstruction.hh  YourExternalBackgroundSource.hh  YourGround.hh  YourMounting.hh  YourPhysicsList.hh  YourPrimaryGenerator.hh  YourRunAction.hh  YourScintillatorCoverageCap.hh  YourScintillatorCrystal.hh  YourScintillatorOuterCoverage.hh  YourSensitiveDetector.hh  YourShielding.hh  YourShieldingSideWall.hh  YourShieldingVerticalWall.hh  YourSideReflectionLayer.hh  YourTopReflectionLayer.hh  YourWorldBox.hh
src/: Materials.cc  YourActionInitialisation.cc  YourBarrel.cc  YourBarrelContent.cc  YourBarrelSideWall.cc  YourBarrelVerticalWall.cc  YourCollimator.cc  YourCollimatorLayer.cc  YourDetector.cc  YourDetectorBody.cc  YourDetectorConstruction.cc  YourExternalBackgroundSource.cc  YourGround.cc  YourMounting.cc  YourPhysicsList.cc  YourPrimaryGenerator.cc  YourRunAction.cc  YourScintillatorCoverageCap.cc  YourScintillatorCrystal.cc  YourScintillatorOuterCoverage.cc  YourSensitiveDetector.cc  YourShielding.cc  YourShieldingSideWall.cc  YourShieldingVerticalWall.cc  YourSideReflectionLayer.cc  YourTopReflectionLayer.cc  YourWorldBox.cc
